# gemini-search-agent

./: LICENSE.txt  README.md  README_en.md  README_ja.md  pyproject.toml
src/gemini_search_agent/: __about__.py  __init__.py  ddg_search.py  gemini_agent.py  new_gemini_agent.py
src/gemini_search_agent/tools/: __init__.py  ddg_search.py  tool.py
tests/: __init__.py  chat_with_gemini.py  test_ainvoke.py  test_ddgsearch.py  test_invoke.py
