[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-search-agent"
dynamic = ["version"]
description = 'Gemini ReAct Agent by Langgraph with original web-searching tool.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["Gemini", "ReAct", "Agent", "langchain", "langgraph", "function calling", "ddgs", "duckduckgo-search", "wrapper"]
authors = [
  { name = "Keisuke Magara", email = "197999578+keimag-maru@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "ddgs",
  "httpx",
  "langchain[google-genai]",
  "langgraph",
]

[project.optional-dependencies]
all = [
  "beautifulsoup4>=4.13.4",
  "readability-lxml>=0.8.4.1",
  "trafilatura>=2.0.0",
]
remove-tags = [
  "beautifulsoup4>=4.13.4",
]
readability = [
  "readability-lxml>=0.8.4.1",
]
trafilatura = [
  "trafilatura>=2.0.0",
]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-s -vvv"

[project.urls]
Documentation = "https://github.com/keimag-maru/gemini-search-agent#readme"
Issues = "https://github.com/keimag-maru/gemini-search-agent/issues"
Source = "https://github.com/keimag-maru/gemini-search-agent"

[tool.hatch.version]
path = "src/gemini_search_agent/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gemini_search_agent tests}"

[tool.coverage.run]
source_pkgs = ["gemini_search_agent", "tests"]
branch = true
parallel = true
omit = [
  "src/gemini_search_agent/__about__.py",
]

[tool.coverage.paths]
gemini_search_agent = ["src/gemini_search_agent", "*/gemini-search-agent/src/gemini_search_agent"]
tests = ["tests", "*/gemini-search-agent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
